syntax = "proto3";

service ConfiguracaoService {
    rpc obterSubcategoriasPorCategoria(Subcategoria) returns (SubcategoriaList) {}
    rpc obterSubcategoriasPorCodigoCategoria(Subcategoria) returns (SubcategoriaList) {}
    rpc obterTodasSubcategorias(Empty) returns (SubcategoriaList) {}
    rpc obterSubcategoriaPorId(Subcategoria) returns (Subcategoria) {}
}

message Empty {}

message Categoria {
   int32 id = 1;
   string codigo = 2;
   string descricao = 3;
}

message CategoriaList {
   repeated Categoria categorias = 1;
}

message Subcategoria {
   int32 id = 1;
   int32 categoriaId = 2;
   string descricao = 3;
   string codigoCategoria = 4;
}

message SubcategoriaList {
   repeated Subcategoria subcategorias = 1;
}

message UnidadeMedida {
   int32 id = 1;
   string codigo = 2;
   string descricao = 3;
}

message UnidadeMedidaList {
   repeated UnidadeMedida unidadeMedidas = 1;
}